fixed empty spacing problems and cleaned margins

--- a/assets/writing-colors/fonts/_writing.scss
+++ b/assets/writing-colors/fonts/_writing.scss
@@ -1,5 +1,6 @@
 $primary-color: teal;
 $secondary-color: #e0ffff;
+$tertiary-color: #01ffff;
 
 
 $primary-font:'Hahmlet', serif;
