--- a/home.css
+++ b/home.css
@@ -15,7 +15,8 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 10vh;
+    height: 9vh;
+    min-height: 73px;
   }
   body .nav .icon {
     text-decoration: none;
@@ -37,7 +38,8 @@
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
-    height: 10vh;
+    margin: 0;
+    padding: 0;
   }
   body .nav ul li {
     list-style: none;
@@ -46,6 +48,9 @@
   body .nav ul li a.navlabel {
     text-decoration: none;
     color: #e0ffff;
+  }
+  body .nav ul li a.navlabel:hover {
+    color: teal;
   }
   body .nav .icon {
     color: #e0ffff;
@@ -72,55 +77,70 @@
   }
   body .landing__header2 {
     font-size: 15px;
-    color: #e0ffff;
+    color: #01ffff;
   }
   body .portanchor {
     height: 10vh;
   }
   body .portfolio {
-    height: 150vh;
-    width: 100%;
-    margin-left: 8vw;
-    margin-right: 8vw;
+    min-height: 100vh;
     color: #e0ffff;
+    margin-bottom: 5px;
+  }
+  body .portfolio__header1 {
+    padding-left: 8.275%;
   }
   body .gallery {
     display: grid;
-    grid-template-columns: 1fr;
     grid-template-rows: repeat(6 fr);
+    grid-template-columns: repeat(3 fr);
+    width: 100vw;
   }
   body .gallery__img1 {
-    margin-top: 2vh;
-    height: 30vh;
-    width: 35vh;
+    padding-top: 2vh;
+    height: 20vh;
+    width: 29vh;
     grid-row: 1/2;
+    grid-column: 1/2;
+    padding-left: 8.275%;
+    padding-bottom: 8px;
   }
   body .gallery__img2 {
-    height: 30vh;
-    width: 35vh;
+    height: 20vh;
+    width: 29vh;
     grid-row: 3/4;
+    padding-left: 8.275%;
+    padding-bottom: 8px;
   }
   body .gallery__img3 {
-    height: 30vh;
-    width: 35vh;
+    height: 20vh;
+    width: 29vh;
     grid-row: 5/6;
+    padding-left: 8.275%;
+    padding-bottom: 8px;
   }
   body .gallery__text1 {
     width: 100%;
     font-size: 12px;
     grid-row: 2/3;
     width: 80vw;
+    padding-left: 8.275%;
+    padding-bottom: 8px;
   }
   body .gallery__text2 {
     font-size: 12px;
     grid-row: 4/5;
     width: 80vw;
+    padding-left: 8.275%;
+    padding-bottom: 8px;
   }
   body .gallery__text3 {
     font-size: 12px;
     grid-row: 6/7;
     width: 80vw;
     color: teal;
+    padding-left: 8.275%;
+    padding-bottom: 8px;
   }
   body .aboutanchor {
     height: 10vh;
@@ -128,30 +148,34 @@
   body .about {
     color: teal;
     height: 90vh;
-    margin-left: 5%;
-    margin-right: 5%;
-    width: 100%;
+    width: 80vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
   body .about__header1 {
     font-size: 20px;
+    margin-left: 8vw;
   }
   body .about__header1-para {
     font-size: 10px;
+    margin-left: 8vw;
   }
   body .about__header2 {
     font-size: 20px;
+    margin-left: 8vw;
   }
   body .about__header2-para {
     font-size: 10px;
+    margin-left: 8vw;
   }
   body .about__header3 {
     font-size: 20px;
+    margin-left: 8vw;
   }
   body .about__header3-para {
     font-size: 10px;
+    margin-left: 8vw;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -207,12 +231,15 @@
     text-decoration: none;
     color: #e0ffff;
   }
+  body .firstpage .nav ul li a.navlabel:hover {
+    color: #01ffff;
+  }
   body .firstpage .nav ul .icon {
     color: #e0ffff;
     font-size: 30px;
   }
   body .firstpage .landing {
-    width: 75vw;
+    width: 75%;
     height: 100vh;
     font-size: large;
     display: flex;
@@ -220,7 +247,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: 20vw;
+    margin-left: 23%;
   }
   body .firstpage .landing__header1 {
     font-size: 40px;
@@ -236,7 +263,7 @@
   }
 
   .portfolio {
-    height: 150vh;
+    min-height: 100vh;
     width: 75vw;
     margin-left: 21vw;
     color: #e0ffff;
@@ -247,38 +274,47 @@
 
   .gallery {
     display: grid;
+    width: 75vw;
     grid-template-columns: repeat(2 fr);
     grid-template-rows: repeat(3 fr);
-    grid-gap: 20px;
+    grid-gap: 50px;
   }
   .gallery__img1 {
-    margin-top: 2vh;
-    height: 32vh;
-    width: 40vh;
+    margin-top: 2.5vh;
+    height: 25vh;
+    width: 35vw;
+    max-width: 300px;
+    max-height: 450px;
     grid-row: 1/2;
     grid-column: 1/2;
   }
   .gallery__img2 {
-    height: 32vh;
-    width: 40vh;
+    margin-top: 1vh;
+    height: 25vh;
+    width: 35vw;
+    max-width: 300px;
+    max-height: 450px;
     grid-column: 2/3;
     grid-row: 2/3;
   }
   .gallery__img3 {
-    height: 32vh;
-    width: 40vh;
+    margin-top: 1vh;
+    height: 25vh;
+    width: 35vw;
+    max-width: 300px;
+    max-height: 450px;
     grid-column: 1/2;
     grid-row: 3/4;
   }
   .gallery__text1 {
     margin-top: 1.5vh;
-    font-size: 18px;
+    font-size: 20px;
   }
   .gallery__text2 {
-    font-size: 18px;
+    font-size: 20px;
   }
   .gallery__text3 {
-    font-size: 18px;
+    font-size: 20px;
     color: teal;
   }
 
@@ -291,6 +327,7 @@
     margin-left: 21vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     color: teal;
   }
   .about__header1 {
